--- a/assets/styles/sass/styles.scss
+++ b/assets/styles/sass/styles.scss
@@ -1,4 +1,7 @@
 @import "variables";
+@import "mixins";
+
+@include fancy-links;
 
 body {
   font-family: $text-font;
@@ -9,6 +12,10 @@ h1, h2, h3, h4 {
   font-family: $headline-font;
 }
 
+h2 {
+  @include large-text;
+}
+
 p {
   font-family: $text-font;
 }
@@ -17,7 +24,13 @@ a {
   color: $link-color;
 }
 
+.warning-button {
+  @include warning;
+  padding: 8px 12px;
+}
+
 #header {
+  @include box;
   height: $header-height;
   background-color: $theme-color;
 
