--- a/assets/styles/sass/styles.scss
+++ b/assets/styles/sass/styles.scss
@@ -1,5 +1,7 @@
+@import "partials/functions";
 @import "partials/variables";
 @import "partials/mixins";
+
 
 @include google-font("Alegreya+Sans");
 @include google-font("Titillium+Web");
@@ -9,6 +11,8 @@
 body {
   font-family: $text-font;
   color: $text-color;
+  font-size: em(18px);
+
   @include large-screens {
     font-size: 125%;
   }
@@ -28,6 +32,10 @@ p {
 
 a {
   color: $link-color;
+
+  &:hover {
+    color: darken($link-color, 15%);
+  }
 }
 
 .warning-button {
@@ -53,6 +61,14 @@ a {
     }
     a {
       color: $menu-item-color;
+      border-bottom: 1px solid transparentize($color: #fefefe, $amount: 1);
+      padding: 6px 8px;
+      transition: border-bottom 0.5s;
+      transition-timing-function: ease-in-out;
+
+      &:hover {
+        border-bottom: 1px solid opacify($color: #fefefe, $amount: 0.5);
+      }
     }
   }
 
@@ -71,9 +87,23 @@ a {
   margin-right: auto;
 
   #content {
+    float: left;
+    width: 6*$col;
   }
 
   #sidebar {
+    float: right;
+    width: 2*$col;
+
+    li{
+      list-style: none;
+      padding: em(16px) em(20px);
+      border-bottom: 1px dashed #999;
+
+      &:hover {
+        background-color: #ededed;
+      }
+    }
   }
 }
 
