--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -4,6 +4,16 @@ a {
   font-style: italic;
   text-decoration: none; }
 
+* html body {
+  font-size: 125%; }
+
+.error, .critical-error, .cta-button, .super-cta-button {
+  color: red; }
+
+.critical-error {
+  border-bottom: 1px solid red;
+  font-weight: bold; }
+
 body {
   font-family: "Alegreya Sans", Arial, sans-serif;
   color: #222222;
@@ -27,15 +37,25 @@ a {
   a:hover {
     color: #ca510d; }
 
-.warning-button {
+.subtitle {
+  font-style: italic; }
+
+.subtitle {
+  font-size: 1.25em; }
+
+.warning-button, .cta-button, .super-cta-button {
   background-color: orange;
   color: white;
   padding: 8px 12px; }
-  .warning-button:hover {
+  .warning-button:hover, .cta-button:hover, .super-cta-button:hover {
     background-color: #ffb733; }
 
-* html body {
-  font-size: 125%; }
+.cta-button, .super-cta-button {
+  border-radius: 6px;
+  font-weight: bold; }
+
+.super-cta-button {
+  font-size: 1.25em; }
 
 #header {
   border-radius: 12px;
