--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -11,13 +11,14 @@ a {
   color: red; }
 
 .critical-error {
-  border-bottom: 1px solid red;
+  bottom: 1px solid red;
   font-weight: bold; }
 
 body {
   font-family: "Alegreya Sans", Arial, sans-serif;
-  color: #222222;
-  font-size: 1.125em; }
+  font-size: 1.125em;
+  color: #fff;
+  background-color: #22222a; }
   @media only screens and (max-width: 960px) {
     body {
       font-size: 125%; } }
@@ -33,26 +34,32 @@ p {
   font-family: "Alegreya Sans", Arial, sans-serif; }
 
 a {
-  color: #f27731; }
+  color: #c24721;
+  color: #8779ff; }
   a:hover {
-    color: #ca510d; }
+    color: #812f16; }
 
-.subtitle {
+.sub-title {
   font-style: italic; }
 
-.subtitle {
+.sub-title {
   font-size: 1.25em; }
 
-.warning-button, .cta-button, .super-cta-button {
+.warning-button {
   background-color: orange;
   color: white;
   padding: 8px 12px; }
-  .warning-button:hover, .cta-button:hover, .super-cta-button:hover {
+  .warning-button:hover {
     background-color: #ffb733; }
 
 .cta-button, .super-cta-button {
+  background-color: orange;
+  color: white;
+  padding: 8px 12px;
   border-radius: 6px;
   font-weight: bold; }
+  .cta-button:hover, .super-cta-button:hover {
+    background-color: #ffb733; }
 
 .super-cta-button {
   font-size: 1.25em; }
@@ -60,17 +67,17 @@ a {
 #header {
   border-radius: 12px;
   border: 1px solid #fff;
-  box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731;
-  -moz-box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731;
-  -webkit-box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731;
+  box-shadow: 2px 0px 4px #999, 1px 1px 6px #c24721;
+  -moz-box-shadow: 2px 0px 4px #999, 1px 1px 6px #c24721;
+  -webkit-box-shadow: 2px 0px 4px #999, 1px 1px 6px #c24721;
   height: 60px;
-  background-color: #170a48; }
+  background-color: #42424a; }
   #header #main-menu li {
     display: inline; }
   #header #main-menu a {
     color: white;
-    border-bottom: 1px solid rgba(254, 254, 254, 0);
     padding: 6px 8px;
+    border-bottom: 1px solid rgba(254, 254, 254, 0);
     transition: border-bottom 0.5s;
     transition-timing-function: ease-in-out; }
     #header #main-menu a:hover {
@@ -91,12 +98,13 @@ a {
     float: right;
     width: 23.25%; }
     #main #sidebar li {
-      list-style: none;
+      list-style-type: none;
       padding: 1em 1.25em;
       border-bottom: 1px dashed #999; }
       #main #sidebar li:hover {
-        background-color: #ededed; }
+        background-color: #efefef; }
 
 #footer {
+  clear: both;
   height: 90px;
-  background-color: #ccf962; }
+  background-color: #698932; }
